--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -2,5 +2,6 @@
 <ul>
   <% @artist.songs.each do |song| %>
     <li><%= song.title %></li>
+    <h3>by: <%= link_to song.title, artist_song_path(@artist, song) %></h3>
   <% end %>
 </ul>
